{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 25,
  "lineage": "3adfb091-e6c8-0c12-0bfd-c99e758de4c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "MATCH-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f432e73a334c880",
            "domain": "vpc",
            "id": "eipalloc-09f432e73a334c880",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-52-47-199-105.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.199.105",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MATCH-INSTANCE-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-01543c6292a7a0766",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01543c6292a7a0766",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-060ec84557433af4f",
            "private_dns": "ip-10-0-1-62.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.62",
            "public_ip": "15.188.118.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bfa72db80c6fc0c2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-05ee9a547a057253d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0520ff12733da37d1",
            "tags": {
              "Name": "MATCH-INSTANCE-ADMIN"
            },
            "tags_all": {
              "Name": "MATCH-INSTANCE-ADMIN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ee9a547a057253d"
            ]
          },
          "dependencies": [
            "aws_security_group.MATCH-SG-ADMIN",
            "aws_subnet.MATCH-PUB-SUBNET",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MATCH-INSTANCE-PRIV1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-015001bc71037fd03",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015001bc71037fd03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0237c7ba1155181d0",
            "private_dns": "ip-10-0-2-186.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03298ea9d4aa7d2cb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-004678f7e6ed81bef"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d65464cef714a6e",
            "tags": {
              "Name": "MATCH-INSTANCE-PRIV1"
            },
            "tags_all": {
              "Name": "MATCH-INSTANCE-PRIV1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004678f7e6ed81bef"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.MATCH-SG-ADMIN",
            "aws_security_group.MATCH-SG-PRIV-WEB",
            "aws_security_group.MATCH-SG-REVERSE",
            "aws_subnet.MATCH-PRIV-SUBNET1",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MATCH-INSTANCE-PRIV2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0c7d7c677e9f8c87c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7d7c677e9f8c87c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a193dd60d41ca4f7",
            "private_dns": "ip-10-0-3-75.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b5b5a89266930cf4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-004678f7e6ed81bef"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ece957d1b2bddff",
            "tags": {
              "Name": "MATCH-INSTANCE-PRIV2"
            },
            "tags_all": {
              "Name": "MATCH-INSTANCE-PRIV2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004678f7e6ed81bef"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.MATCH-SG-ADMIN",
            "aws_security_group.MATCH-SG-PRIV-WEB",
            "aws_security_group.MATCH-SG-REVERSE",
            "aws_subnet.MATCH-PRIV-SUBNET2",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MATCH-INSTANCE-PRIV3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0ce369bfab64dc777",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce369bfab64dc777",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0707dc0e05a8ce52f",
            "private_dns": "ip-10-0-4-136.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fa6280764397f747",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-004678f7e6ed81bef"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bd28cdb9b291c89",
            "tags": {
              "Name": "MATCH-INSTANCE-PRIV3"
            },
            "tags_all": {
              "Name": "MATCH-INSTANCE-PRIV3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004678f7e6ed81bef"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.MATCH-SG-ADMIN",
            "aws_security_group.MATCH-SG-PRIV-WEB",
            "aws_security_group.MATCH-SG-REVERSE",
            "aws_subnet.MATCH-PRIV-SUBNET3",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MATCH-INSTANCE-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-02373ff1f6004f51f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02373ff1f6004f51f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07f71b6ce6afef2f9",
            "private_dns": "ip-10-0-1-232.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.232",
            "public_ip": "13.39.111.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c40388d925bb2ad0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0eadbac2886bdc1f2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0520ff12733da37d1",
            "tags": {
              "Name": "MATCH-INSTANCE-REVERSE"
            },
            "tags_all": {
              "Name": "MATCH-INSTANCE-REVERSE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eadbac2886bdc1f2"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.MATCH-SG-ADMIN",
            "aws_security_group.MATCH-SG-REVERSE",
            "aws_subnet.MATCH-PUB-SUBNET",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MATCH-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-017ba6f0bb4994531",
            "id": "igw-017ba6f0bb4994531",
            "owner_id": "962615889483"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "MATCH-NAT-GTW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f432e73a334c880",
            "association_id": "eipassoc-0a8cc64386d2e4e46",
            "connectivity_type": "public",
            "id": "nat-0cc09c8130da244b3",
            "network_interface_id": "eni-07493bbcbebb6477d",
            "private_ip": "10.0.1.122",
            "public_ip": "52.47.199.105",
            "subnet_id": "subnet-0520ff12733da37d1",
            "tags": {
              "Name": "MATCH-NAT-GTW"
            },
            "tags_all": {
              "Name": "MATCH-NAT-GTW"
            }
          },
          "dependencies": [
            "aws_eip.MATCH-EIP",
            "aws_internet_gateway.MATCH-IGW",
            "aws_subnet.MATCH-PUB-SUBNET",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "MATCH-ROUTE-DEFAULT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-017ba6f0bb4994531",
            "id": "r-rtb-0b6c1cb3d5540b2711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6c1cb3d5540b271",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MATCH-IGW",
            "aws_internet_gateway_attachment.MATCH-IGW-ATTACHMENT",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MATCH-ROUTE-PRIV",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-00a57b8660ad7b53f",
            "id": "rtb-00a57b8660ad7b53f",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cc09c8130da244b3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MATCH-ROUTE-PRIV"
            },
            "tags_all": {
              "Name": "MATCH-ROUTE-PRIV"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a290b806f29bce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.MATCH-EIP",
            "aws_internet_gateway.MATCH-IGW",
            "aws_nat_gateway.MATCH-NAT-GTW",
            "aws_subnet.MATCH-PUB-SUBNET",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MATCH-ROUTE-PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0d51fbf71f25a7f96",
            "id": "rtb-0d51fbf71f25a7f96",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-017ba6f0bb4994531",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MATCH-ROUTE1"
            },
            "tags_all": {
              "Name": "MATCH-ROUTE1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a290b806f29bce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MATCH-IGW",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MATCH-RTB-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e3d7bf8ed576f35",
            "route_table_id": "rtb-00a57b8660ad7b53f",
            "subnet_id": "subnet-04d65464cef714a6e"
          },
          "dependencies": [
            "aws_eip.MATCH-EIP",
            "aws_internet_gateway.MATCH-IGW",
            "aws_nat_gateway.MATCH-NAT-GTW",
            "aws_route_table.MATCH-ROUTE-PRIV",
            "aws_subnet.MATCH-PRIV-SUBNET1",
            "aws_subnet.MATCH-PUB-SUBNET",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MATCH-RTB-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e334b9a4f4c1b6c8",
            "route_table_id": "rtb-00a57b8660ad7b53f",
            "subnet_id": "subnet-03ece957d1b2bddff"
          },
          "dependencies": [
            "aws_eip.MATCH-EIP",
            "aws_internet_gateway.MATCH-IGW",
            "aws_nat_gateway.MATCH-NAT-GTW",
            "aws_route_table.MATCH-ROUTE-PRIV",
            "aws_subnet.MATCH-PRIV-SUBNET2",
            "aws_subnet.MATCH-PUB-SUBNET",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MATCH-RTB-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4dd72af3d721c4b",
            "route_table_id": "rtb-00a57b8660ad7b53f",
            "subnet_id": "subnet-01bd28cdb9b291c89"
          },
          "dependencies": [
            "aws_eip.MATCH-EIP",
            "aws_internet_gateway.MATCH-IGW",
            "aws_nat_gateway.MATCH-NAT-GTW",
            "aws_route_table.MATCH-ROUTE-PRIV",
            "aws_subnet.MATCH-PRIV-SUBNET3",
            "aws_subnet.MATCH-PUB-SUBNET",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MATCH-SG-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-05ee9a547a057253d",
            "description": "MATCH-SG-ADMIN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ee9a547a057253d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MATCH-SG1-ALLOW-SSH-FROM-EXT",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "MATCH-SG-ADMIN",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MATCH-SG-ADMIN"
            },
            "tags_all": {
              "Name": "MATCH-SG-ADMIN"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a290b806f29bce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MATCH-SG-PRIV-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-004678f7e6ed81bef",
            "description": "MATCH-SG-PRIV-WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004678f7e6ed81bef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALLOW-SSH-FROM-ADMIN-TO-PRIV",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05ee9a547a057253d"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "MATCH-SG-ALLOW-WEB-TO-REVERSE",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eadbac2886bdc1f2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MATCH-SG-PRIV-WEB",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MATCH-SG-PRIV-WEB"
            },
            "tags_all": {
              "Name": "MATCH-SG-PRIV-WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a290b806f29bce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.MATCH-SG-ADMIN",
            "aws_security_group.MATCH-SG-REVERSE",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MATCH-SG-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0eadbac2886bdc1f2",
            "description": "MATCH-SG-REVERSE",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eadbac2886bdc1f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MATCH-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "MATCH-SG-REVERSE-ALLOW-SSH-FROM-ADMIN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05ee9a547a057253d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "MATCH-SG1",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MATCH-SG-REVERSE"
            },
            "tags_all": {
              "Name": "MATCH-SG-REVERSE"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a290b806f29bce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.MATCH-SG-ADMIN",
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MATCH-PRIV-SUBNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-04d65464cef714a6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d65464cef714a6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MATCH-PRIV-SUBNET1"
            },
            "tags_all": {
              "Name": "MATCH-PRIV-SUBNET1"
            },
            "vpc_id": "vpc-08a290b806f29bce1"
          },
          "dependencies": [
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MATCH-PRIV-SUBNET2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-03ece957d1b2bddff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ece957d1b2bddff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MATCH-PRIV-SUBNET2"
            },
            "tags_all": {
              "Name": "MATCH-PRIV-SUBNET2"
            },
            "vpc_id": "vpc-08a290b806f29bce1"
          },
          "dependencies": [
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MATCH-PRIV-SUBNET3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-01bd28cdb9b291c89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bd28cdb9b291c89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MATCH-PRIV-SUBNET3"
            },
            "tags_all": {
              "Name": "MATCH-PRIV-SUBNET3"
            },
            "vpc_id": "vpc-08a290b806f29bce1"
          },
          "dependencies": [
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MATCH-PUB-SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0520ff12733da37d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0520ff12733da37d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MATCH-PUB-SUBNET"
            },
            "tags_all": {
              "Name": "MATCH-PUB-SUBNET"
            },
            "vpc_id": "vpc-08a290b806f29bce1"
          },
          "dependencies": [
            "aws_vpc.MATCH-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MATCH-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-08a290b806f29bce1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054a0793ac387fe2d",
            "default_route_table_id": "rtb-0b6c1cb3d5540b271",
            "default_security_group_id": "sg-0675b4a74ee29a5eb",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a290b806f29bce1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6c1cb3d5540b271",
            "owner_id": "962615889483",
            "tags": {
              "Name": "MATCH-VPC"
            },
            "tags_all": {
              "Name": "MATCH-VPC"
            }
          }
        }
      ]
    }
  ]
}